<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History"
    android:background="@drawable/crosses">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_history"
        android:padding="30dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_h1of4"
        android:padding="10dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_h2of4"
        android:padding="10dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_h3of4"
        android:padding="10dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_h4of4"
        android:padding="10dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>
</LinearLayout>

</ScrollView>