<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs"
    android:orientation="vertical"
    android:background="@drawable/crosses">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_contactus"
        android:padding="30dp"
        android:textSize="18dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_address1"
        android:padding="10dp"
        android:textSize="18dp"
        android:fontFamily="sans-serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_contact1"
        android:padding="10dp"
        android:textSize="18dp"
        android:fontFamily="sans-serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_contact2"
        android:padding="10dp"
        android:textSize="18dp"
        android:fontFamily="sans-serif"/>

</LinearLayout>